添加了stylesheet.css，美化界面

--- a/resource.qrc
+++ b/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/bgimg">
         <file>widget-bg.jpg</file>
+        <file>dragon-cat.gif</file>
     </qresource>
 </RCC>
