自定义窗口边框及按钮

--- a/resource.qrc
+++ b/resource.qrc
@@ -3,4 +3,9 @@
         <file>widget-bg.jpg</file>
         <file>dragon-cat.gif</file>
     </qresource>
+    <qresource prefix="/uiimg">
+        <file>close.png</file>
+        <file>hide.png</file>
+        <file>systrayicon.jpg</file>
+    </qresource>
 </RCC>
