--- a/widget.ui
+++ b/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>954</width>
-    <height>661</height>
+    <width>955</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>0</y>
+     <y>40</y>
      <width>961</width>
      <height>611</height>
     </rect>
@@ -81,7 +81,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>30</height>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -100,7 +100,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>30</height>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -208,54 +208,48 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>610</y>
+     <y>650</y>
      <width>211</width>
      <height>51</height>
     </rect>
    </property>
-   <widget class="QLabel" name="userPicLab">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>51</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>用户头像</string>
-    </property>
-    <property name="textFormat">
-     <enum>Qt::AutoText</enum>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
    <widget class="QLabel" name="userNameLab">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>0</y>
+      <y>6</y>
       <width>111</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>用户名</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="loginStatusLab">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>20</y>
+      <y>25</y>
       <width>111</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>已登录</string>
+     <string>未登录</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="loginBtn">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>4</y>
+      <width>51</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>登录</string>
     </property>
    </widget>
   </widget>
@@ -263,7 +257,7 @@
    <property name="geometry">
     <rect>
      <x>740</x>
-     <y>630</y>
+     <y>670</y>
      <width>211</width>
      <height>21</height>
     </rect>
