--- a/resource.qrc
+++ b/resource.qrc
@@ -8,4 +8,7 @@
         <file>hide.png</file>
         <file>systrayicon.jpg</file>
     </qresource>
+    <qresource prefix="/stylesheet">
+        <file>stylesheet.css</file>
+    </qresource>
 </RCC>
